force-app/main/default/objects/Event_Sales__c/Event_Sales__c.object-meta.xml
<CustomObject>
    <label>Event Sales</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>Event Sales Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Sales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>