force-app/main/default/objects/Event_Sales__c/fields/Event_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Event_Receipt__c</fullName>
    <label>Event Receipt</label>
    <referenceTo>Event_Receipt__c</referenceTo>
    <relationshipLabel>Event Sales</relationshipLabel>
    <relationshipName>Event_Sales</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>