force-app/main/default/objects/Event_Sales__c/fields/PDF_Index__c.field-meta.xml
<CustomField>
    <fullName>PDF_Index__c</fullName>
    <label>PDF Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>