force-app/main/default/objects/Event_Sales__c/fields/PDF_Item__c.field-meta.xml
<CustomField>
    <fullName>PDF_Item__c</fullName>
    <formula>IF( RecordType.DeveloperName == &apos;Discount&apos;, 

 IF( ISBLANK(  Product__c ), &apos;Discount：&apos; &amp;  Description__c  , &apos;Discount：&apos; &amp; Product_Show__r.Name ) ,  

IF( RecordType.DeveloperName == &apos;Warranty&apos;, &apos;Warranty：&apos; &amp; Product_Show__r.Name,Product_Show__r.Name ) )</formula>
    <label>PDF Item</label>
    <type>Text</type>
</CustomField>