force-app/main/default/objects/Event_Sales__c/fields/Product_Show__c.field-meta.xml
<CustomField>
    <fullName>Product_Show__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Event Sales (Product)</relationshipLabel>
    <relationshipName>Event_Sales2</relationshipName>
    <type>Lookup</type>
</CustomField>