force-app/main/default/objects/Event_Sales__c/fields/ProductShowLine__c.field-meta.xml
<CustomField>
    <fullName>ProductShowLine__c</fullName>
    <formula>text( Product_Show__r.Product_Line__c )</formula>
    <label>ProductShowLine</label>
    <type>Text</type>
</CustomField>