force-app/main/default/objects/Event_Sales__c/fields/Warranty_period_increase__c.field-meta.xml
<CustomField>
    <fullName>Warranty_period_increase__c</fullName>
    <label>Warranty period increase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 year</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 years</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 years</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4 years</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5 years</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>6 years</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>7 years</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>8 years</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>9 years</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>10 years</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>