force-app/main/default/objects/Event_Sales__c/fields/Warranty_price_increase__c.field-meta.xml
<CustomField>
    <fullName>Warranty_price_increase__c</fullName>
    <label>Warranty price increase</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>