force-app/main/default/objects/Event_Sales__c/recordTypes/Discount.recordType-meta.xml
<RecordType>
    <fullName>Discount</fullName>
    <active>true</active>
    <label>Discount</label>
</RecordType>