force-app/main/default/objects/Event_Sales__c/recordTypes/Warranty.recordType-meta.xml
<RecordType>
    <fullName>Warranty</fullName>
    <active>true</active>
    <label>Warranty</label>
</RecordType>